# Family-Friendly-Facility

./: .editorconfig  .env.example  .gitignore  DEPLOYMENT.md  PROJECT_STATUS.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .eslintrc.json  README.md  package.json  tsconfig.json  vercel.json
backend-hasura/: .env.example  ACTIONS.md  SETUP.md  config.yaml
data/: Makefile  README.md  convert_voluntary_nursing_rooms.py  merge_nursing_rooms.py  parse-sample.ts  parse_sample.py  pyproject.toml  reverse_geocode_playgrounds.py  update_details_from_json.py
data/cleaned_data/: 全國哺集乳室.json  全國親子廁所.json  台北市公園遊戲場.json  台北市國小遊戲場.json  台灣縣市鄉鎮.json  新北市共融公園遊戲場.json
data/sample_output/: new-taipei-parks-sample.json  nursing-rooms-mandatory-sample.json  nursing-rooms-voluntary-sample.json  taipei-inclusive-playgrounds-sample.json  toilets-sample.json
data/scripts/: README.md  __init__.py  convert_nursing_rooms.py  fetch_town_info.py  geocode_nursing_rooms.py  parse_address.py  parse_nursing_rooms.py  parse_playgrounds.py  parse_toilets.py  process_pdf_playgrounds.py  scrape_new_taipei_parks.py  scrape_taipei_playgrounds.py
data/source_data/: 全國依法設置哺集乳室名單(截至115年1月).csv  全國自願設置哺集乳室名單(截至115年1月).csv  台北市公園遊戲場_清單.html  台北市公園遊戲場詳細資料.html  台北市共榮式遊戲場-遊戲場資訊-永建國小.html  台北市共榮式遊戲場-遊戲場資訊-芝山國小.html  台北市共融式遊戲場-遊戲場資訊-軟橋公園.html  新北市共融_特色公園.html  新北市共融公園.csv  新北市政府來新北玩公園-共融_特色公園：鶯歌逗逗龍公園.html
frontend/: .env.example  README.md  index.html  (+1 more)
frontend-nextjs/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+66 files in other folders)
